--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1d1fed66",
    "metadata": {},
    "outputs": [
@@ -643,9 +643,8 @@
    "source": [
     "import pandas as pd\n",
     "df=pd.read_csv('CarData.csv')\n",
-    "#data=df.drop(['Id'],axis=1)\n",
-    "dara=df.info()\n",
-    "print(dara)"
+    "data=df.info()\n",
+    "print(data)"
    ]
   },
   {
@@ -715,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "7254e3fd",
    "metadata": {},
    "outputs": [
@@ -742,7 +741,7 @@
     "import pandas as pd \n",
     "df=pd.read_csv(\"CarDataSet3.csv\")\n",
     "df['Model'] = df.name.str.split().str.get(1) + df.name.str.split().str.get(2)\n",
-    "print(df.Model)\n"
+    "print(df.Model)"
    ]
   },
   {
