--- a/Assigment2.ipynb
+++ b/Assigment2.ipynb
@@ -1103,6 +1103,69 @@
     "print(f'Coefficient: {regressor.coef_}')\n",
     "print(f'Intercept: {regressor.intercept_}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e9f511e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 0.0044\n",
+      "Mean Absolute Error (MAE): 0.0552\n",
+      "Root Mean Squared Error (RMSE): 0.997\n",
+      "R² Score: 0.9566\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\saksh\\AppData\\Roaming\\Python\\Python313\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but MinMaxScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "\n",
+    "df_sal = pd.read_csv('Salary_Data.csv')\n",
+    "\n",
+    "x = df_sal[['YearsExperience']]\n",
+    "Y = df_sal[['Salary']]\n",
+    "\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "Y_scaled = scaler.fit_transform(Y)\n",
+    "\n",
+    "\n",
+    "m = 9500\n",
+    "b = 26000\n",
+    "\n",
+    "\n",
+    "Y_pred = m * df_sal['YearsExperience'] + b\n",
+    "\n",
+    "\n",
+    "Y_pred_scaled = scaler.transform(Y_pred.values.reshape(-1, 1))\n",
+    "\n",
+    "\n",
+    "mse = mean_squared_error(Y_scaled, Y_pred_scaled)\n",
+    "mae = mean_absolute_error(Y_scaled, Y_pred_scaled)\n",
+    "rmse = 0.5 ** mse\n",
+    "\n",
+    "r2 = r2_score(Y_scaled, Y_pred_scaled)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", round(mse, 4))\n",
+    "print(\"Mean Absolute Error (MAE):\", round(mae, 4))\n",
+    "print(\"Root Mean Squared Error (RMSE):\", round(rmse, 4))\n",
+    "print(\"R² Score:\", round(r2, 4))\n"
+   ]
   }
  ],
  "metadata": {
