--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -192,7 +192,8 @@
       "    accuracy                           0.65       192\n",
       "   macro avg       0.58      0.51      0.42       192\n",
       "weighted avg       0.60      0.65      0.53       192\n",
-      "\n"
+      "\n",
+      "Model Accuracy: 0.65\n"
      ]
     }
    ],
@@ -200,7 +201,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -236,16 +237,11 @@
     "plt.title('Confusion Matrix', fontsize=15, pad=15)\n",
     "plt.show()\n",
     "\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n"
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Model Accuracy: {accuracy:.2f}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5aceeae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
